partial cart implementation, bugfixes, etc.
