# api/src/routes/addresses-route.ts
@@ -4,6 +4,7 @@ import {
     createAddress,
     deleteAddress,
     getAddress,
+    getMyAddresses,
     updateAddress,
 } from '../controllers/address-controller'
 import { protect } from '../controllers/auth-controller'
@@ -11,6 +12,7 @@ import { protect } from '../controllers/auth-controller'
 const router = Router()
 
 router.route('/').post(createAddress)
+router.route('/myAddresses').get(protect, getMyAddresses)
 
 router
     .route('/:id')
