# api/src/routes/discounts-route.ts
@@ -1,9 +1,13 @@
 import { Router } from 'express'
 
-import { getDiscount } from '../controllers/discount-controller'
+import {
+    getDiscount,
+    getDiscountByCode,
+} from '../controllers/discount-controller'
 
 const router = Router()
 
+router.route('/code').get(getDiscountByCode)
 router.route('/:id').get(getDiscount)
 
 export default router
