# api/src/routes/products-route.ts
@@ -5,6 +5,7 @@ import {
     getProduct,
     searchProducts,
     getProductsOnSale,
+    getProductPrice,
 } from '../controllers/product-controller'
 
 const router = Router()
@@ -12,6 +13,7 @@ const router = Router()
 router.route('/').get(getProducts)
 router.route('/search').get(searchProducts)
 router.route('/sale').get(getProductsOnSale)
+router.route('/price/:id').get(getProductPrice)
 router.route('/:id').get(getProduct)
 
 export default router
