# api/swagger.yaml
@@ -223,6 +223,32 @@ paths:
                             schema:
                                 $ref: '#/components/schemas/Error'
 
+    /api/store/addresses/myAddresses:
+        get:
+            summary: Gets current users addresses
+            tags:
+                - Store/Addresses
+            security:
+                - bearerAuth: []
+            responses:
+                200:
+                    description: Returns addresses
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    data:
+                                        type: array
+                                        items:
+                                            $ref: '#/components/schemas/Address'
+                401:
+                    description: Unauthorized
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+
     /api/store/addresses/{id}:
         get:
             summary: Gets the address
@@ -394,6 +420,28 @@ paths:
                                 properties:
                                     data:
                                         $ref: '#/components/schemas/Cart'
+                400:
+                    description: Bad request
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
+
+    /api/store/discounts/code:
+        get:
+            summary: Gets discount by code
+            tags:
+                - Store/Discount
+            responses:
+                200:
+                    description: Returns the discount
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    data:
+                                        $ref: '#/components/schemas/Discount'
                 400:
                     description: Bad request
                     content:
@@ -602,6 +650,37 @@ paths:
                                         type: array
                                         items:
                                             $ref: '#/components/schemas/Product'
+
+    /api/store/products/price/{id}:
+        get:
+            summary: Gets products price
+            tags:
+                - Store/Products
+            parameters:
+                - in: path
+                  name: id
+                  required: true
+                  schema:
+                      type: string
+            responses:
+                200:
+                    description: Returns the product price
+                    content:
+                        application/json:
+                            schema:
+                                type: object
+                                properties:
+                                    data:
+                                        originalPrice:
+                                            type: number
+                                        discountedPrice:
+                                            type: number
+                404:
+                    description: Product not found
+                    content:
+                        application/json:
+                            schema:
+                                $ref: '#/components/schemas/Error'
 
     /api/store/products/{id}:
         get:
